--- a/visavia/index.html
+++ b/visavia/index.html
@@ -143,7 +143,7 @@
 				<div class="container-fluid">
 					<div class="reasons__holder">
 						<div class="row h-100">
-							<div class="col-md-8 col-ml-6">
+							<div class="col-sm-9 col-md-8 col-ml-6">
 								<div class="reasons__content">
 									<h2>Почему 12.000 клиентов выбрали нас</h2>
 									<ul class="checked-list">
@@ -172,7 +172,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="reasons__img d-none d-md-block">
+					<div class="reasons__img">
 						<img src="img/reasons/1.png" alt="">
 					</div>
 					<div class="reasons__shadow"></div>
@@ -405,7 +405,7 @@
 											</li>
 										</ul>
 									</div>
-									<div class="col-md-5 col-ml-4 align-self-end">
+									<div class="col-md-6 col-ml-4 align-self-end">
 										<form class="consult-form">
 											<div class="consult-form__title">Получите консультацию визового эксперта бесплатно</div>
 											<div class="consult-form__subtitle">Наш специалист позвонит вам в течение 30 минут и проконсультирует бесплатно</div>
