--- a/visavia/index.html
+++ b/visavia/index.html
@@ -189,7 +189,7 @@
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_schengen">
 										<div class="visa-direction__illustr"></div>
-										<div class="visa-direction__img" style="background-image: url(img/viza-type/1.jpg)"></div>
+										<div class="visa-direction__img" style="background-image: url(img/visa-direction/1.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
 												<div class="visa-direction__name">Шенген</div>
@@ -207,7 +207,7 @@
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_asia">
 										<div class="visa-direction__illustr"></div>
-										<div class="visa-direction__img" style="background-image: url(img/viza-type/2.jpg)"></div>
+										<div class="visa-direction__img" style="background-image: url(img/visa-direction/2.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
 												<div class="visa-direction__name">Азия</div>
@@ -225,7 +225,7 @@
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_europe">
 										<div class="visa-direction__illustr"></div>
-										<div class="visa-direction__img" style="background-image: url(img/viza-type/3.jpg)"></div>
+										<div class="visa-direction__img" style="background-image: url(img/visa-direction/3.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
 												<div class="visa-direction__name">Европа</div>
@@ -243,7 +243,7 @@
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_america">
 										<div class="visa-direction__illustr"></div>
-										<div class="visa-direction__img" style="background-image: url(img/viza-type/4.jpg)"></div>
+										<div class="visa-direction__img" style="background-image: url(img/visa-direction/4.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
 												<div class="visa-direction__name">Америка</div>
@@ -261,7 +261,7 @@
 								<div class="col-sm-6 col-ml-4 which__item">
 									<div class="visa-direction visa-direction_oceania">
 										<div class="visa-direction__illustr"></div>
-										<div class="visa-direction__img" style="background-image: url(img/viza-type/5.jpg)"></div>
+										<div class="visa-direction__img" style="background-image: url(img/visa-direction/5.jpg)"></div>
 										<div class="visa-direction__holder">
 											<div class="visa-direction__content">
 												<div class="visa-direction__name">Океания</div>
@@ -446,6 +446,181 @@
 				<div class="container-fluid">
 					<div class="title visa-type__title">
 						<h2>Оформляем 5 видов виз от 1 до 3 дней с гарантией выдачи</h2>
+					</div>
+					<ul class="nav nav-tabs visa-type__control">
+						<li class="nav-tabs__item">
+							<a href="#vt1" class="active show" data-toggle="tab">Туристическая</a>
+						</li>
+						<li class="nav-tabs__item">
+							<a href="#vt2" class="" data-toggle="tab">Гостевая виза</a>
+						</li>
+						<li class="nav-tabs__item">
+							<a href="#vt3" class="" data-toggle="tab">Бизнес виза</a>
+						</li>
+						<li class="nav-tabs__item">
+							<a href="#vt4" class="" data-toggle="tab">Студенческая виза</a>
+						</li>
+						<li class="nav-tabs__item">
+							<a href="#vt5" class="" data-toggle="tab">Виза невесты /&nbsp;жениха</a>
+						</li>
+					</ul>
+					<div class="tab-content visa-type__holder">
+						<div id="vt1" class="tab-pane fade active show">
+							<div class="row">
+								<div class="col-6">
+									<div class="visa-type__img">
+										<div class="travel-img">
+											<img src="img/visa-type/travel/1.png" alt="" class="travel-img__item">
+											<img src="img/visa-type/travel/2.png" alt="" class="travel-img__item">
+											<img src="img/visa-type/travel/3.png" alt="" class="travel-img__item">
+											<img src="img/visa-type/travel/4.png" alt="" class="travel-img__item">
+										</div>
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="visa-type__content">
+										<h3>Туристическая виза</h3>
+										<div class="visa-type__text">
+											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
+											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
+											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
+											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+										</div>
+										<div class="visa-type__btn">
+											<a href="#" class="btn">
+												<div class="btn__holder">
+													<div class="btn__text">Оформить <br> визу</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div id="vt2" class="tab-pane fade">
+							<div class="row">
+								<div class="col-6">
+									<div class="visa-type__img">
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="visa-type__content">
+										<h3>Гостевая виза</h3>
+										<div class="visa-type__text">
+											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
+											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
+											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
+											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+										</div>
+										<div class="visa-type__btn">
+											<a href="#" class="btn">
+												<div class="btn__holder">
+													<div class="btn__text">Оформить <br> визу</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div id="vt3" class="tab-pane fade">
+							<div class="row">
+								<div class="col-6">
+									<div class="visa-type__img">
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="visa-type__content">
+										<h3>Бизнес виза</h3>
+										<div class="visa-type__text">
+											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
+											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
+											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
+											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+										</div>
+										<div class="visa-type__btn">
+											<a href="#" class="btn">
+												<div class="btn__holder">
+													<div class="btn__text">Оформить <br> визу</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div id="vt4" class="tab-pane fade">
+							<div class="row">
+								<div class="col-6">
+									<div class="visa-type__img">
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="visa-type__content">
+										<h3>Студенческая виза</h3>
+										<div class="visa-type__text">
+											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
+											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
+											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
+											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+										</div>
+										<div class="visa-type__btn">
+											<a href="#" class="btn">
+												<div class="btn__holder">
+													<div class="btn__text">Оформить <br> визу</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div id="vt5" class="tab-pane fade">
+							<div class="row">
+								<div class="col-6">
+									<div class="visa-type__img">
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="visa-type__content">
+										<h3>Виза невесты / жениха</h3>
+										<div class="visa-type__text">
+											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
+											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
+											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
+											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+										</div>
+										<div class="visa-type__btn">
+											<a href="#" class="btn">
+												<div class="btn__holder">
+													<div class="btn__text">Оформить <br> визу</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
