--- a/visavia/index.html
+++ b/visavia/index.html
@@ -511,10 +511,10 @@
 									<div class="visa-type__content">
 										<h3>Гостевая виза</h3>
 										<div class="visa-type__text">
-											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
-											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
-											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
-											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+											<p>Разрешение на въезд в другую страну с целью посещения родственников или друзей.
+											</p>
+											<p>Основное отличие от других виз — оформление по приглашению принимающей стороны. </p>
+											<p>Подходит для посещения конференций и симпозиумов, поездок к родственникам, поступления в иностранный вуз. </p>
 										</div>
 										<div class="visa-type__btn">
 											<a href="#" class="btn">
@@ -541,10 +541,9 @@
 									<div class="visa-type__content">
 										<h3>Бизнес виза</h3>
 										<div class="visa-type__text">
-											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
-											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
-											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
-											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+											<p>Выдается гражданам, которые въезжают в другую страну по приглашению от иностранных организаций с деловыми целями.</p>
+											<p>Дает право временно пребывать в стране во время командировки или с целью деловой поездки. </p>
+											<p>Не дает права на учебу и трудоустройство на время поездки.</p>
 										</div>
 										<div class="visa-type__btn">
 											<a href="#" class="btn">
@@ -571,10 +570,7 @@
 									<div class="visa-type__content">
 										<h3>Студенческая виза</h3>
 										<div class="visa-type__text">
-											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
-											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
-											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
-											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+											<p>Дает право абитуриенту въехать в другую страну для прохождения учебного курса.</p>
 										</div>
 										<div class="visa-type__btn">
 											<a href="#" class="btn">
@@ -601,10 +597,9 @@
 									<div class="visa-type__content">
 										<h3>Виза невесты / жениха</h3>
 										<div class="visa-type__text">
-											<p>Разрешение на въезд в другую страну для отдыхающих.</p>
-											<p>Срок пребывания в стране не должен превышать 90 суток подряд.</p>
-											<p>Консульства решают этот вопрос в индивидуальном порядке.</p>
-											<p>Минимальный срок нахождения в пределах иностранного государства – 15 суток, максимальный 60 суток и более по согласованию. </p>
+											<p>Неиммиграционная виза предназначена для иностранца, планирующего заключить брак с гражданином страны в течение 90 дней с момента въезда.
+											</p>
+											<p>После заключения брака иностранный гражданин меняет свой статус на статус постоянного жителя.</p>
 										</div>
 										<div class="visa-type__btn">
 											<a href="#" class="btn">
@@ -712,6 +707,115 @@
 						</div>
 						<div class="skewed__shadow"></div>
 					</div>
+				</div>
+			</section>
+			<section class="anim-section faq">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-4 mb-5 mb-md-0 text-center text-md-left pr-xl-5">
+							<h2 class="faq__title">Часто задаваемые вопросы</h2>
+							<div class="faq__description">
+								<svg class="icon-qst ">
+									<use xlink:href="img/svg/symbol/sprite.svg#qst"></use>
+								</svg><b>Остались вопросы?</b>Задайте свой вопрос и получите ответ на бесплатной консультации от менеджера
+							</div>
+							<div class="row align-items-center">
+								<div class="col-sm-6 col-md-12">
+									<div class="faq__manager">
+										<div class="row align-items-center">
+											<div class="col-auto mb-3">
+												<div class="faq__manager-img">
+													<img src="img/faq/manager.png" alt="">
+												</div>
+											</div>
+											<div class="col text-left mb-3">
+												<b>Живенкова Полина</b>- менеджер
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-12">
+									<div class="faq__btn">
+										<a href="#" class="btn">
+											<div class="btn__holder">
+												<div class="btn__text">Задать <br> вопрос</div>
+												<div class="btn__ico">
+													<svg class="icon-qst ">
+														<use xlink:href="img/svg/symbol/sprite.svg#qst"></use>
+													</svg></div>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-8">
+							<ul class="faq-list" id="accordion">
+								<li>
+									<a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down1" aria-expanded="false" aria-controls="scroll-down1"><span>Визу в какую страну лучше оформлять в моем случае?</span></a>
+									<div class="collapse" id="scroll-down1" data-parent="#accordion">
+										<div class="faq-list__content">
+											<p class="mb-4">Наш визовый эксперт проконсультирует вас лично по тел.: 8(4932)77-36-22 или нажмите</p>
+											<a href="#" class="btn mb-3">
+												<div class="btn__holder">
+													<div class="btn__text">Заказать <br> звонок</div>
+													<div class="btn__ico">
+														<svg class="icon-click ">
+															<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+														</svg></div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down2" aria-expanded="false" aria-controls="scroll-down2"><span>Какой пакет документов необходим?</span></a>
+									<div class="collapse" id="scroll-down2" data-parent="#accordion">
+										<div class="faq-list__content">
+											<ul class="checked-list mb-3">
+												<li>
+													<svg class="icon-check ">
+														<use xlink:href="img/svg/symbol/sprite.svg#check"></use>
+													</svg><span>Поможем со сбором и заполнением пакета документов.</span>
+												</li>
+												<li>
+													<svg class="icon-check ">
+														<use xlink:href="img/svg/symbol/sprite.svg#check"></use>
+													</svg><span>За консультацией по перечню обращайтесь по тел.: 8(4932)77-36-22 Забронируем отель и авиабилеты – это включено в стоимость наших услуг.</span>
+												</li>
+												<li>
+													<svg class="icon-check ">
+														<use xlink:href="img/svg/symbol/sprite.svg#check"></use>
+													</svg><span>Фото на визу – в подарок.</span>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<li>
+									<a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down3" aria-expanded="false" aria-controls="scroll-down3"><span>Какой пакет документов подготовите вы для меня?</span></a>
+									<div class="collapse" id="scroll-down3" data-parent="#accordion">
+										<div class="faq-list__content">3</div>
+									</div>
+								</li>
+								<li>
+									<a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down4" aria-expanded="false" aria-controls="scroll-down4"><span>Включены ли в стоимость консульские и визовые сборы?</span></a>
+									<div class="collapse" id="scroll-down4" data-parent="#accordion">
+										<div class="faq-list__content">4</div>
+									</div>
+								</li>
+								<li>
+									<a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down5" aria-expanded="false" aria-controls="scroll-down5"><span>Сроки выдачи</span></a>
+									<div class="collapse" id="scroll-down5" data-parent="#accordion">
+										<div class="faq-list__content">5</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="faq__back">
+					<img src="img/faq/back.png" alt="">
 				</div>
 			</section>
 		</main>
