--- a/visavia/index.html
+++ b/visavia/index.html
@@ -11,6 +11,7 @@
 	<title>Visavia</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="slick/slick.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -818,12 +819,98 @@
 					<img src="img/faq/back.png" alt="">
 				</div>
 			</section>
+			<section class="anim-section reviews">
+				<div class="container-fluid">
+					<div class="title">
+						<h2>Отзывы наших клиентов</h2>
+					</div>
+					<div class="slider">
+						<div class="reviews__holder slider__holder">
+							<div class="reviews__item">
+								<div class="row justify-content-between">
+									<div class="col-md-6 order-2 order-md-1">
+										<div class="reviews__content">
+											<svg class="icon-quote ">
+												<use xlink:href="img/svg/symbol/sprite.svg#quote"></use>
+											</svg>
+											<h3>Спасибо, что быстро.</h3>
+											<p>Документы приняли без проблем и очередей всего за 10 минут.</p>
+											<p>Все объяснили и рассказали. Уже через пять дней получила свой паспорт и визу. Какая я счастливая, ура, завтра лечу в Индию.</p>
+											<a href="#" class="reviews__read-more">Читать полностью</a>
+											<div class="row align-items-center">
+												<div class="col-auto">
+													<div class="reviews__flag">
+														<img src="img/reviews/flags/1.png" alt="">
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviews__name">Марина Борисова</div>
+													<div class="reviews__country">Индия</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-5 order-1 order-md-2">
+										<div class="reviews__photo">
+											<img src="img/reviews/1.jpg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="reviews__item">
+								<div class="row justify-content-between">
+									<div class="col-md-6 order-2 order-md-1">
+										<div class="reviews__content">
+											<svg class="icon-quote ">
+												<use xlink:href="img/svg/symbol/sprite.svg#quote"></use>
+											</svg>
+											<h3>Спасибо, что быстро.</h3>
+											<p>Документы приняли без проблем и очередей всего за 10 минут.</p>
+											<p>Все объяснили и рассказали. Уже через пять дней получила свой паспорт и визу. Какая я счастливая, ура, завтра лечу в Индию.</p>
+											<a href="#" class="reviews__read-more">Читать полностью</a>
+											<div class="row align-items-center">
+												<div class="col-auto">
+													<div class="reviews__flag">
+														<img src="img/reviews/flags/1.png" alt="">
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviews__name">Марина Борисова</div>
+													<div class="reviews__country">Индия</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-5 order-1 order-md-2">
+										<div class="reviews__photo">
+											<img src="img/reviews/1.jpg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider__nav"></div>
+					</div>
+					<div class="text-center">
+						<a href="#" class="btn">
+							<div class="btn__holder">
+								<div class="btn__text">Оформить <br> визу</div>
+								<div class="btn__ico">
+									<svg class="icon-click ">
+										<use xlink:href="img/svg/symbol/sprite.svg#click"></use>
+									</svg></div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 		</footer>
 	</div>
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="slick/slick.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
