--- a/visavia/index.html
+++ b/visavia/index.html
@@ -177,6 +177,10 @@
 						<img src="img/reasons/1.png" alt="">
 					</div>
 					<div class="reasons__shadow"></div>
+					<div class="reasons__illustr">
+						<img src="img/reasons/2.png" alt="">
+						<img src="img/reasons/3.png" alt="">
+					</div>
 				</div>
 			</section>
 			<section class="which anim-section">
@@ -283,7 +287,7 @@
 										<div class="consult-form__subtitle">Наш специалист позвонит вам в течение 30 минут и проконсультирует бесплатно</div>
 										<input type="text" class="input consult-form__input" placeholder="Как Вас зовут ?">
 										<input type="text" class="input consult-form__input" placeholder="Введите свой номер телефон">
-										<a href="#" class="btn">
+										<a href="#" class="btn" data-toggle="modal" data-target="#consult">
 											<div class="btn__holder">
 												<div class="btn__text">Получить <br> консультацию</div>
 												<div class="btn__ico">
@@ -301,6 +305,11 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="which__illustr">
+					<img src="img/which/3.png" alt="">
+					<img src="img/which/4.png" alt="">
+					<img src="img/which/5.png" alt="">
 				</div>
 			</section>
 			<section class="anim-section difficulties">
@@ -378,6 +387,10 @@
 						</div>
 					</div>
 				</div>
+				<div class="difficulties__illustr">
+					<img src="img/difficulties/2.png" alt="">
+					<img src="img/difficulties/3.png" alt="">
+				</div>
 			</section>
 			<section class="anim-section steps">
 				<div class="container-fluid">
@@ -441,6 +454,11 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="steps__illustr">
+					<img src="img/steps/2.png" alt="">
+					<img src="img/steps/3.png" alt="">
+					<img src="img/steps/4.png" alt="">
 				</div>
 			</section>
 			<section class="visa-type">
@@ -619,6 +637,11 @@
 						</div>
 					</div>
 				</div>
+				<div class="visa-type__illustr">
+					<img src="img/visa-type/1.png" alt="">
+					<img src="img/visa-type/2.png" alt="">
+					<img src="img/visa-type/3.png" alt="">
+				</div>
 			</section>
 			<section class="anim-section calc">
 				<div class="container-fluid">
@@ -708,6 +731,12 @@
 						</div>
 						<div class="skewed__shadow"></div>
 					</div>
+				</div>
+				<div class="calc__illustr">
+					<img src="img/reasons/3.png" alt="">
+					<img src="img/calc/1.png" alt="">
+					<img src="img/calc/2.png" alt="">
+					<img src="img/calc/3.png" alt="">
 				</div>
 			</section>
 			<section class="anim-section faq">
@@ -893,6 +922,12 @@
 							<div class="slider__nav"></div>
 							<div class="reviews__shadow"></div>
 						</div>
+						<div class="reviews__illustr">
+							<img src="img/reviews/2.png" alt="">
+							<img src="img/reviews/3.png" alt="">
+							<img src="img/reviews/4.png" alt="">
+							<img src="img/reviews/5.png" alt="">
+						</div>
 					</div>
 					<div class="text-center">
 						<a href="#" class="btn">
@@ -909,10 +944,10 @@
 			</section>
 			<section class="anim-section find-us">
 				<div class="container-fluid">
+					<div class="title">
+						<h2>Как нас найти</h2>
+					</div>
 					<div class="find-us__holder">
-						<div class="title">
-							<h2>Как нас найти</h2>
-						</div>
 						<div class="row justify-centent-center justify-centent-md-between">
 							<div class="col-md mb-5 mb-md-0">
 								<div class="find-us__content">
@@ -927,7 +962,7 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col text-center text-md-left">
+							<div class="col text-center text-md-right">
 								<div class="find-us__form">
 									<div class="caption caption_white caption_footered">
 										<div class="caption__holder">
@@ -960,6 +995,13 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="find-us__marker">
+					<img src="img/find-us/3.png" alt="">
+				</div>
+				<div class="find-us__illustr">
+					<img src="img/find-us/1.png" alt="">
+					<img src="img/find-us/2.png" alt="">
 				</div>
 			</section>
 		</main>
