--- a/visavia/index.html
+++ b/visavia/index.html
@@ -1064,7 +1064,12 @@
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="slick/slick.min.js"></script>
+	<script src="js/svg4everybody.min.js"></script>
 	<script src="js/main.js"></script>
+	<script>
+		svg4everybody();
+
+	</script>
 </body>
 
 </html>
